k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
    app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-cohort/squad6-ml-backend
  labels:
    app: room-6-backend-app
    app.kubernetes.io/instance: room-6-backend-app-instance
    app.kubernetes.io/name: room-6-backend-app
    app.openshift.io/runtime: python
  name: room-6-backend-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: room-6-backend-app-instance
      app.kubernetes.io/name: room-6-backend-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: room-6-backend-app-instance
        app.kubernetes.io/name: room-6-backend-app
    spec:
      containers:
        - env:
            - name: INGRESS_HOST
            - name: PROTOCOLS
            - name: LOG_LEVEL
              value: debug
          image: quay.io/nickmerrett/room6-ml-backend
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: room-6-backend-app
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: "/.cvlib/"
              name: frontend-model-storage
      volumes:
        - name: backend-model-storage
          persistentVolumeClaim:
            claimName: backend-model-storage

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
