k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: room-6-backend-app
    app.kubernetes.io/instance: room-6-backend-app-instance
    app.kubernetes.io/name: room-6-backend-app
  name: room-6-backend-app
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/instance: room-6-backend-app-instance
    app.kubernetes.io/name: room-6-backend-app
  sessionAffinity: None
  type: ClusterIP
